--- a/module_01/ex00/Makefile
+++ b/module_01/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: tda-silv <tda-silv@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/30 09:01:22 by tda-silv          #+#    #+#              #
-#    Updated: 2023/01/12 20:29:23 by tda-silv         ###   ########.fr        #
+#    Updated: 2023/01/12 21:05:16 by tda-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -33,7 +33,9 @@ I_HEADERS	= -I $(INC_DIR)
 NAME_FILE	= $(addprefix class/,												\
 								Zombie											\
 			   )																\
-			   main
+			   main																\
+			   newZombie														\
+			   randomChump														\
 
 SRC			= $(addsuffix .cpp, $(addprefix $(SRC_DIR), $(NAME_FILE)))
 OBJ			= $(addsuffix .o, $(addprefix $(OBJ_DIR), $(NAME_FILE)))
