--- a/module_09/ex02/Makefile
+++ b/module_09/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: tda-silv <tda-silv@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/30 09:01:22 by tda-silv          #+#    #+#              #
-#    Updated: 2023/07/20 18:22:10 by tda-silv         ###   ########.fr        #
+#    Updated: 2023/07/21 09:22:54 by tda-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,12 +32,9 @@ I_HEADERS	= -I $(INC_DIR)
 
 HEADERS		= $(shell find include/ -type f)
 
-NAME_FILE	= $(addprefix class/,				\
-								Vect_list		\
-			   )								\
-			   main								\
-			   parsing							\
-			   make_pair						\
+NAME_FILE	= main		\
+			  parsing	\
+			  make_pair	\
 
 SRC			= $(addsuffix .cpp, $(addprefix $(SRC_DIR), $(NAME_FILE)))
 OBJ			= $(addsuffix .o, $(addprefix $(OBJ_DIR), $(NAME_FILE)))
