--- a/module_09/ex02/Makefile
+++ b/module_09/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: tda-silv <tda-silv@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/30 09:01:22 by tda-silv          #+#    #+#              #
-#    Updated: 2023/07/24 16:25:59 by tda-silv         ###   ########.fr        #
+#    Updated: 2023/07/24 20:07:46 by tda-silv         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -33,6 +33,7 @@ I_HEADERS	= -I $(INC_DIR)
 HEADERS		= $(shell find include/ -type f)
 
 NAME_FILE	= main								\
+			  use_vector						\
 			  parsing							\
 			  make_pair							\
 			  sort_pair							\
@@ -40,6 +41,8 @@ NAME_FILE	= main								\
 			  build_S_pend						\
 			  jacobsthal						\
 			  binary_insert						\
+			  insert_sort_pend					\
+			  show_S							\
 
 SRC			= $(addsuffix .cpp, $(addprefix $(SRC_DIR), $(NAME_FILE)))
 OBJ			= $(addsuffix .o, $(addprefix $(OBJ_DIR), $(NAME_FILE)))
